--- a/thinkpink_app/src/components/NavbarDark.module.css
+++ b/thinkpink_app/src/components/NavbarDark.module.css
@@ -8,6 +8,7 @@
 
 .nav_link__active {
     text-decoration: underline;
+    color: #EE77A0;
 }
 
 
@@ -16,8 +17,20 @@
     justify-content: space-between;
     align-items: center;
     width: 100vw;
-
 }
 
 
+.nav_link__dropdown{
+    background-color: transparent;
+    color: white;
+    border: none;
+    font-size: 1rem;
+    margin-left: 0.7rem;
+    margin-right: 1rem;
+}
 
+.language_flag {
+    width: 1.2rem;
+    margin-left: 3rem;
+    margin-bottom: -0.3rem;
+}
