css detail page

--- a/thinkpink_app/client/src/components/Race.module.css
+++ b/thinkpink_app/client/src/components/Race.module.css
@@ -6,6 +6,7 @@
     display: flex;
     text-decoration: none;
     margin: 2rem;
+    box-shadow: 10px 13px 31px -15px rgba(0,0,0,0.2);
 }
 
 .race_textcontainer{
