--- a/thinkpink_app/client/src/containers/Races.module.css
+++ b/thinkpink_app/client/src/containers/Races.module.css
@@ -7,3 +7,9 @@
     margin: 2rem;
     width: 30rem;
 }
+
+.h1 {
+    margin-top: 2rem;
+    text-align: center;
+    composes: App-h1 from "../styles/App.css"
+}
