--- a/thinkpink_app/client/src/containers/Detail.module.css
+++ b/thinkpink_app/client/src/containers/Detail.module.css
@@ -6,10 +6,26 @@
 
 }
 
+.container_map {
+    display: flex;
+    flex-direction: column;
+}
+
 .backButton {
     color: var(--pink-primair);
     text-decoration: none;
     font-size: 1rem;
+    background-color: transparent;
+    border: 0 solid transparent;
+    font-family: 'poppinsbold';
+}
+
+.backButton:hover {
+    color: var(--pink-primair-focus);
+}
+
+.backButton:focus {
+    outline: none;
 }
 
 .detail_body {
@@ -67,19 +83,84 @@
 }
 
 .counter_container {
-    background-color: red;
-    width: 20rem;
+    background-color: white;
+    width: 18rem;
     display: flex;
     position: absolute;
+    justify-content: space-between;
     z-index: 2;
-    height: 1rem;
+    height: 4rem;
     border-radius: 1rem;
-    padding: 2rem;
+    padding: 2rem 3rem;
     margin-top: -3rem;
     margin-left: 1.5rem;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.2);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    margin-bottom: 2rem;
 }
+
 
 .info_image {
     z-index: -2;
-
 }
+
+.days {
+    color: var(--pink-primair);
+    font-size: 0.9rem;
+    font-family: 'poppinsbold';
+}
+
+.days_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.days_number {
+    font-family: 'poppinsbold';
+    font-size: 4rem;
+}
+
+
+.container_program {
+    display: flex;
+    margin-top: 10rem;
+}
+
+
+.section2 {
+    margin-top: 4rem;
+}
+
+.section2_container_title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    background-image: url('../assets/images/cards/cardDetail.png');
+    background-repeat: no-repeat;
+    width: 15rem;
+    height: 20rem;
+    margin-top: 6rem;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile_detail {
+    margin-top: -3rem;
+}
+
+.card_text {
+    color: white;
+    font-family: 'poppinsbold';
+    text-align: center;
+    margin-top: 1rem;
+    padding: 2rem;
+}
+
