--- a/thinkpink_app/client/src/containers/Detail.module.css
+++ b/thinkpink_app/client/src/containers/Detail.module.css
@@ -18,6 +18,7 @@
     background-color: transparent;
     border: 0 solid transparent;
     font-family: 'poppinsbold';
+    margin-top: 1rem;
 }
 
 .backButton:hover {
@@ -77,7 +78,7 @@
 
 .detail_container_info {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
     justify-content: space-between;
     max-width: 80rem;
 }
@@ -102,6 +103,7 @@
 
 .info_image {
     z-index: -2;
+    border-radius: 1rem;
 }
 
 .days {
@@ -123,12 +125,62 @@
     font-size: 4rem;
 }
 
+.map {
+
+}
+
 
 .container_program {
     display: flex;
+    flex-direction: row;
     margin-top: 10rem;
+    justify-content: space-between;
+    max-width: 70rem;
 }
 
+@media screen and (max-width: 1000px) {
+    .container_program {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .map {
+        width: 30rem;
+    }
+
+    .program_section {
+        margin-top: 3rem;
+    }
+
+
+    .detail_container_info {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .primair_button {
+        display: flex;
+        justify-content: center;
+        margin-top: 2rem;
+    }
+
+    .info_container_text {
+        margin-top: 5rem;
+        margin-bottom: -3rem;
+    }
+
+    .info_image {
+       height: 20rem;
+       width: 30rem;
+       margin-top: 3rem;
+    }
+    
+}
+
+.primair_button {
+
+}
 
 .section2 {
     margin-top: 4rem;
@@ -164,3 +216,23 @@
     padding: 2rem;
 }
 
+.info_lotgenoot {
+    composes: App-body from "../styles/App.css";
+    max-width: 60rem;
+    text-align: center;
+}
+
+
+.program_time {
+    color: var(--pink-primair);
+    font-family: 'poppinssemibold';
+    font-size: 1.2rem;
+}
+
+.program_tr {
+    height: 2rem;
+}
+
+.program_activity {
+    font-size: 1.2rem;
+}
