join page 15% ready

--- a/thinkpink_app/client/src/styles/App.css
+++ b/thinkpink_app/client/src/styles/App.css
@@ -215,9 +215,33 @@ outline: none;
   line-height: 1.6rem;
 }
 
+.App-body-bold {
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  font-family: 'poppinssemibold';
+  color: #563F45;
+}
+
 .App-background-header {
   height: 22rem;
   background-image: url("../assets/images/header.png")
+}
+
+
+.App-card {
+  background-color: white;
+  width: 40vw;
+  color: black;
+  border-radius: 0.5rem;
+  display: flex;
+  text-decoration: none;
+  margin: 2rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.App-card:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 /* .button {
