--- a/thinkpink_app/client/src/containers/Info.module.css
+++ b/thinkpink_app/client/src/containers/Info.module.css
@@ -1,3 +1,56 @@
 .uppercontainer {
     color: black;
 }
+
+.card_container {
+    background-color: white;
+    color: black;
+    border-radius: 0.5rem;
+    display: flex;
+    text-decoration: none;
+    margin: 2rem 1rem;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    width: 90vw;
+    padding: 2rem;
+
+
+}
+
+.tekst_person {
+    composes: App-body from "../styles/App.css";
+    width: 30rem;
+    padding: 0 2rem;
+}
+
+.info_musicname {
+    composes: App-body from "../styles/App.css";
+    opacity: 0.3;
+}
+
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info_person_container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 1rem;
+}
+
+.info_icon {
+    padding-right: 2rem;
+}
+
+.info_icon__music {
+    padding-right: 2rem;
+    padding-left: 0.5rem;
+}
+
+.info_icon__teamcaptain {
+    padding-right: 1.7rem;
+}
