--- a/thinkpink_app/client/src/components/Race.module.css
+++ b/thinkpink_app/client/src/components/Race.module.css
@@ -17,6 +17,7 @@
     color: #83344E;
     opacity: 0.5;
     text-decoration: none;
+    font-size: 1rem;
 }
 
 .race_quantity {
@@ -39,4 +40,19 @@
     display: flex;
     color: white;
     padding: 0.9rem;
+    width:3rem;
+    height: 4rem;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.month {
+    font-size: 1rem;
+    opacity: 0.6;
+    padding: 0.3rem;
+}
+
+.date {
+    font-family: 'poppinsbold';
 }
