--- a/thinkpink_app/client/src/components/Race.module.css
+++ b/thinkpink_app/client/src/components/Race.module.css
@@ -1,26 +1,35 @@
-
-
 .race_textcontainer{
-    margin: 0.5rem;
+    margin: 0rem 0.9rem 0rem 0.5rem;
+    display: grid;
+    align-items: end;
+    grid-template-columns: 40px 1fr 4fr 80px;
+    grid-template-rows: 45% 25px 45px;
+    grid-template-areas: ". city . date"
+    ". country . ."
+    " . teams teams teams"
 }
 
 
-
-
 .race_city{
+    grid-area: city;
     color: #83344E;
     text-decoration: none;
+    font-family: 'poppinsextrabold_italic';
+    font-size: 1.5rem;
 }
 
 
 .race_country {
+    grid-area: country;
     color: #83344E;
     opacity: 0.5;
     text-decoration: none;
     font-size: 1rem;
+    font-family: 'poppinsbold';
 }
 
 .race_quantity {
+    grid-area: teams;
     composes: App-subtitle from "../styles/App.css";
     display: flex;
     justify-content: flex-end;
@@ -29,17 +38,22 @@
 
 .race_quantity__teams {
     display: flex;
+    margin-right: 0.4rem;
+    margin-top: -0.3rem;
 }
 
 .race_quantity__people {
-
+    margin-left: 2rem;
+    margin-top: -0.3rem;
+    margin-right: 0.4rem;
 }
 
 .race_date {
+    grid-area: date;
     background-color: #E6618F;
     display: flex;
     color: white;
-    padding: 0.9rem;
+    padding: 0.2rem 0.9rem 0.6rem 0.9rem;
     width:3rem;
     height: 4rem;
     flex-direction: column;
