--- a/thinkpink_app/client/src/styles/colors.module.css
+++ b/thinkpink_app/client/src/styles/colors.module.css
@@ -2,6 +2,7 @@
     --pink-darkbackground: #FED6E0;
     --pink-primair: #E6618F;
     --pink-primair-focus: #D03971;
+    --brown-title: #614B50;
   }
 
 
