--- a/thinkpink_app/client/src/components/NavbarDark.module.css
+++ b/thinkpink_app/client/src/components/NavbarDark.module.css
@@ -27,6 +27,11 @@
     font-size: 1rem;
     margin-left: 0.7rem;
     margin-right: 1rem;
+    height: 2rem;
+}
+
+.nav_link__dropdown:focus {
+    outline: none;
 }
 
 .language_flag {
@@ -36,6 +41,6 @@
 }
 
 .personIcon {
-    margin-bottom: -0.3rem;
+    margin-bottom: -0.1rem;
     margin-right: 0.5rem;
 }
