--- a/thinkpink_app/client/src/components/auth/LoginForm.module.css
+++ b/thinkpink_app/client/src/components/auth/LoginForm.module.css
@@ -1,8 +1,7 @@
 .formContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    font-size: 1rem;
 }
 
 .label{
@@ -20,6 +19,7 @@
 }
 
 .inputfieldError {
+    font-size: 1rem;
     composes: inputfield;
     border: 0.1rem solid #FA7573
 }
@@ -61,3 +61,7 @@
     color: var(--pink-primair)
 }
 
+.name_container {
+    display: flex;
+    flex-direction: row;
+}
