first step form completely works

--- a/thinkpink_app/client/src/styles/App.css
+++ b/thinkpink_app/client/src/styles/App.css
@@ -372,6 +372,8 @@ ol.progtrckr {
   margin: 0;
   padding-bottom: 2.2rem;
   list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 ol.progtrckr li {
   display: inline-block;
@@ -382,6 +384,7 @@ ol.progtrckr li {
 }
 ol.progtrckr li span {
   padding: 0 1.5rem;
+  font-size: 1rem;
 }
 @media (max-width: 650px) {
   .progtrckr li span {
@@ -405,11 +408,11 @@ ol.progtrckr li.progtrckr-todo {
 }
 ol.progtrckr li.progtrckr-doing {
   color: black;
-  border-bottom: 4px solid #33C3F0;
+  border-bottom: 4px solid var(--pink-primair);
 }
 ol.progtrckr li.progtrckr-done {
   color: black;
-  border-bottom: 4px solid #33C3F0;
+  border-bottom: 4px solid var(--pink-primair);
 }
 ol.progtrckr li:after {
   content: "\00a0\00a0";
@@ -428,29 +431,37 @@ ol.progtrckr li.progtrckr-todo:before {
   line-height: 1.4em;
 }
 ol.progtrckr li.progtrckr-todo:hover:before {
-  color: #0FA0CE;
+  color: var(--pink-primair);
 }
 
 ol.progtrckr li.progtrckr-doing:before {
   content: "\2022";
   color: white;
-  background-color: #33C3F0;
+  background-color: var(--pink-primair);
   width: 1.2em;
   line-height: 1.2em;
   border-radius: 1.2em;
 }
 ol.progtrckr li.progtrckr-doing:hover:before {
-  color: #0FA0CE;
+  color: var(--pink-primair);
 }
 
 ol.progtrckr li.progtrckr-done:before {
   content: "\2713";
   color: white;
-  background-color: #33C3F0;
+  background-color: var(--pink-primair);
   width: 1.2em;
   line-height: 1.2em;
   border-radius: 1.2em;
 }
 ol.progtrckr li.progtrckr-done:hover:before {
-  color: #0FA0CE;
+  color: var(--pink-primair);
+}
+
+
+.App-button_form_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 4rem;
 }
