--- a/thinkpink_app/client/src/containers/Signup.module.css
+++ b/thinkpink_app/client/src/containers/Signup.module.css
@@ -95,3 +95,53 @@
     margin-top: 1rem;
 }
    
+
+/* FORM */
+
+.form_change {
+    margin-top: 2rem;
+    margin-bottom: -3rem;
+    font-family: 'poppinsbold';
+    composes: App-body from "../styles/App.css"
+}
+
+.form_container {
+    margin: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form_textWelcome {
+    max-width: 40rem;
+    composes: App-body from "../styles/App.css"
+}
+
+
+.form_pinkText {
+    composes: App-body from "../styles/App.css";
+    font-size: 0.8rem;
+    color: var(--pink-primair)
+}
+
+.form_cursief {
+    composes: App-body from "../styles/App.css";
+    opacity: 0.6;
+    font-size: 0.8rem;
+    font-style: italic;
+}
+
+
+.form_link__dropdown{
+    background-color: transparent;
+    color: black;
+    border: 1px solid var(--pink-primair);
+    font-size: 1rem;
+    height: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+.form_link__dropdown:focus {
+    outline: none;
+}
