step 4 and 5 added and nearly ready

--- a/thinkpink_app/client/src/containers/Signup.module.css
+++ b/thinkpink_app/client/src/containers/Signup.module.css
@@ -172,3 +172,8 @@
         flex-direction: column;
     }
 }
+
+.lidtoevoegen {
+    margin-top: 3rem;
+    composes: App-button_secundair from "../styles/App.css"
+}
