material ui implemented

--- a/thinkpink_app/client/src/containers/Signup.module.css
+++ b/thinkpink_app/client/src/containers/Signup.module.css
@@ -236,3 +236,15 @@
     font-family: 'poppinsbold';
     font-size: 2rem;
 }
+
+.bigtext {
+    height: 8rem;
+    width: 30vw;
+    font-size: 1.2rem;
+    text-align: start;
+}
+
+
+.inputTextfield {
+    margin-bottom: 2rem;
+}
