--- a/thinkpink_app/client/src/styles/App.css
+++ b/thinkpink_app/client/src/styles/App.css
@@ -239,6 +239,17 @@ outline: none;
   margin-left: -2rem;
 }
 
+.App-card_static {
+  background-color: white;
+  width: 40vw;
+  color: black;
+  border-radius: 0.5rem;
+  display: flex;
+  text-decoration: none;
+  margin: 2rem;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
+}
+
 .App-h1 {
   font-size: 3rem;
   color: var(--pink-darkbackground);
