--- a/thinkpink_app/client/src/containers/Home.module.css
+++ b/thinkpink_app/client/src/containers/Home.module.css
@@ -19,6 +19,7 @@ body {
     z-index: 3;
     background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0));
     height: 20rem;
+    width: 100%;
   }
 
 .title {
@@ -41,8 +42,11 @@ body {
 .section3 {
   position: absolute;
   top: 215%;
-  left: 10%;
+  left: 0%;
   z-index: 2;
+  padding-left: 6rem;
+
+
 }
 
 .section4 {
@@ -53,18 +57,23 @@ body {
   margin-top: -3rem;
   background-image: url('../assets/images/challengeBackground.png');
   width: 100%;
-  height: 40rem;
+  height: 70rem;
 }
 
 .section5 {
-  position: absolute;
-  top: 380%;
-  left: 0%;
+
   z-index: 2;
-  margin-top: -3rem;
-  background-image: url('../assets/images/run.png');
-  width: 100%;
+  margin-top: 6rem;
+  /* background-image: url('../assets/images/run.png'); */
+  background-repeat: no-repeat;
   height: 30rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.imgWaarom {
+  margin-right: 8rem;
 }
 
 
@@ -112,6 +121,8 @@ body {
   /* display: flex;
   padding: 3rem;
   justify-content: space-between; */
+  padding: 2rem 2rem 2rem 6rem;
+  justify-content: center;
 }
 
 .challenges__image {
@@ -263,6 +274,7 @@ body {
     grid-template-rows: 1fr 1fr;
     grid-area: '. container_challenge container_challenge .'
     '. container_challenge container_challenge .';
+    grid-gap: 6rem;
   }
 }
 
@@ -281,4 +293,10 @@ body {
 
 .homeSupporter_container {
   padding-right: 3rem;
+}
+
+
+.waaromlopen {
+  width: 30rem;
+  composes: App-body from "../styles/App.css"
 }
