--- a/thinkpink_app/client/src/containers/Info.module.css
+++ b/thinkpink_app/client/src/containers/Info.module.css
@@ -21,7 +21,7 @@
 }
 
 .profilepictureRita {
-    margin-left: 4rem;
+    margin-bottom: 2rem;
     margin-top: 3rem;
 }
 
@@ -175,3 +175,10 @@
 }
 
 
+.fotocontainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
